--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <p>국립해양박물관 클론코딩입니다.</p>
                   </figcaption>
                 </figure>
-                <a href="http://kimhyeonhdae.dothome.co.kr/kmm" target="_blank" class="move-link">바로가기</a>
+                <a href="https://kmm-main.netlify.app" target="_blank" class="move-link">바로가기</a>
               </li>
               <li class="pf pf-2">
                 <h4>BLACK BEAN</h4>
@@ -186,7 +186,7 @@
                     <p>가상 브렌드카페로 카페의 정보를 알려주는 사이트입니다.</p>
                   </figcaption>
                 </figure>
-                <a href="http://kimhyeonhdae.dothome.co.kr/blackbean/" target="_blank" class="move-link">바로가기</a>
+                <a href="https://blackbean.netlify.app" target="_blank" class="move-link">바로가기</a>
                 <a href="./pdf/BLACKBEAN_2.pdf" class="info-link">설명보기</a>
               </li>
               <li class="pf pf-3">
@@ -198,7 +198,7 @@
                       최신정보를 제공해주는 사이트입니다.</p>
                   </figcaption>
                 </figure>
-                <a href="http://kimhyeonhdae.dothome.co.kr/imearth/" target="_blank" class="move-link">바로가기</a>
+                <a href="https://imearth.netlify.app" target="_blank" class="move-link">바로가기</a>
                 <a href="./pdf/imerath.pdf" class="info-link">설명보기</a>
               </li>
               <li class="pf pf-4">
@@ -210,7 +210,7 @@
                       제공하는 홈페이지입니다.</p>
                   </figcaption>
                 </figure>
-                <a href="http://kimhyeonhdae.dothome.co.kr/spaceblack/" target="_blank" class="move-link">바로가기</a>
+                <a href="https://spaceblack.netlify.app" target="_blank" class="move-link">바로가기</a>
                 <a href="./pdf/SpaceBlack_window_ver.pdf" class="info-link">설명보기</a>
               </li>
               <li class="pf pf-5">
@@ -221,7 +221,7 @@
                     <p>삼성물산 리디자인 반응형</p>
                   </figcaption>
                 </figure>
-                <a href="http://kimhyeonhdae.dothome.co.kr/7sung/" target="_blank" class="move-link">바로가기</a>
+                <a href="https://7sung.netlify.app" target="_blank" class="move-link">바로가기</a>
               </li>
               <li class="pf pf-6">
                 <h4>형대중공업</h4>
@@ -231,7 +231,7 @@
                     <p>현대중공업 리디자인 반응형</p>
                   </figcaption>
                 </figure>
-                <a href="http://kimhyeonhdae.dothome.co.kr/hyundai/" target="_blank" class="move-link">바로가기</a>
+                <a href="https://hyundai-main.netlify.app target="_blank" class="move-link">바로가기</a>
               </li>
               <li class="pf pf-7">
                 <h4>형대건설</h4>
@@ -241,7 +241,17 @@
                     <p>포스코건설 리디자인 반응형</p>
                   </figcaption>
                 </figure>
-                <a href="http://kimhyeonhdae.dothome.co.kr/posco/" target="_blank" class="move-link">바로가기</a>
+                <a href="https://posco.netlify.app" target="_blank" class="move-link">바로가기</a>
+              </li>
+              <li class="pf pf-8">
+                <h4>메가박스</h4>
+                <figure>
+                  <img src="./img/megabox.png" alt="메가박스">
+                  <figcaption>
+                    <p>메가박스 반응형</p>
+                  </figcaption>
+                </figure>
+                <a href="https://megabox-main.netlify.app" target="_blank" class="move-link">바로가기</a>
               </li>
             </ul>
             <div class="btns-box">
